<resources>
    <string name="app_name">UICommonControls</string>
    <string name="act1_title">Práctica 1 Android</string>
    <string name="act1_nombre">Nombre:</string>
    <string name="act1_date">DD/MM/YYYY</string>
    <string name="act1_phone">0987654321</string>
    <string name="g_nero">Género</string>
    <string name="enviar">ENVIAR</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="fecha_nac">Fecha Nac:</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="nombre">Nombre</string>
</resources>