<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="24dp">

    <TextView
        android:id="@+id/lbl_titulo_act_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act1_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:text="@string/act1_nombre"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_genero"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/g_nero"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nombre" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/lbl_nombre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_fecha_nac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/act1_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toTopOf="@+id/txt_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lbl_fecha_nac"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/act1_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toTopOf="@+id/btn_enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lbl_fecha_nac"
        app:layout_constraintTop_toBottomOf="@+id/lbl_fecha_nac"
        app:layout_constraintVertical_bias="0.021"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lbl_fecha_nac"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/fecha_nac"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_genero" />

    <TextView
        android:id="@+id/lbl_telefono"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:text="@string/tel_fono"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_fecha_nac"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_telefono"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_fecha_nac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/lbl_nombre"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nombre"
        app:layout_constraintVertical_bias="0.934">

        <RadioButton
            android:id="@+id/opc_masculino"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/opc_femenino"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/femenino" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>